Adding final version of customer analysis

--- a/Solution-Final/customeranalysisrounds-3.ipynb
+++ b/Solution-Final/customeranalysisrounds-3.ipynb
@@ -5,14 +5,7 @@
     "colab": {
       "name": "customeranalysisrounds.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "1p12kk949VNO",
-        "X3Zlap3-OG1T",
-        "yjApgMsKnkJc",
-        "MU6VfXjOsrO4",
-        "wB0LqCL_uo44"
-      ],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -73,7 +66,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 323
         },
         "id": "_9_hPsyJ4VO0",
         "outputId": "2c269ff6-8f10-4329-ef86-6ee3a4d8d409"
@@ -219,7 +212,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 323
         },
         "id": "GUOqlkqN4Va8",
         "outputId": "41a61d59-a7c2-4ddf-ab10-59f1afd82705"
@@ -488,7 +481,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 323
         },
         "id": "SNUZ-bDA4VvG",
         "outputId": "97a64416-bf17-49d8-bd9c-ee5dfdc07175"
@@ -1318,7 +1311,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 493
+          "height": 731
         },
         "id": "WrflwL3M_udK",
         "outputId": "0558043d-3a1c-4f21-fbbf-49ad46ee9896"
@@ -2114,7 +2107,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 306
         },
         "id": "93P5532JAKR7",
         "outputId": "327beab1-086e-430c-edb1-7d6c6b6551d1"
@@ -2250,7 +2243,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 854
+          "height": 1000
         },
         "id": "deTHVq5SFHpI",
         "outputId": "9da8b942-3bf2-40f2-f07a-5cc47c021d09"
@@ -2705,7 +2698,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 461
+          "height": 631
         },
         "id": "5RFY0w4UFuwB",
         "outputId": "3900b999-6e7e-4f6c-c187-8fd847780540"
@@ -2946,7 +2939,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 473
+          "height": 728
         },
         "id": "q5FBByTcF2NB",
         "outputId": "9237cecc-ed69-4a18-8693-16921ba0172d"
@@ -3247,7 +3240,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 323
         },
         "id": "5IL2ppItGTZ3",
         "outputId": "c863a9aa-1896-4393-c096-144c9d19e3f9"
@@ -3734,7 +3727,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 436
+          "height": 453
         },
         "id": "MQ9uDyFg9lAk",
         "outputId": "97566d56-a94b-49c3-9e4d-50cde58008ac"
@@ -3934,7 +3927,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 606
+          "height": 643
         },
         "id": "_OR0bRIi_9Zm",
         "outputId": "63fcfb2a-2091-4ef6-f576-a6701a6403f3"
@@ -4907,7 +4900,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 207
+          "height": 244
         },
         "id": "WQiboEnz9TR-",
         "outputId": "32e22d28-81ea-408d-83f9-2215583004d4"
@@ -6059,7 +6052,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 379
+          "height": 498
         },
         "id": "cWzeNK9EY-Oy",
         "outputId": "81fc4a74-6c3d-488e-e5bd-95935a406321"
@@ -6407,7 +6400,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 436
+          "height": 453
         },
         "id": "sHaoHV-anwTl",
         "outputId": "5e7ffa8b-5530-45d5-a87b-57f6bc0df240"
@@ -6695,7 +6688,7 @@
         "id": "M2lzuYgRsdWU",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 314
+          "height": 331
         },
         "outputId": "5ee80b67-c414-4735-c5bf-52b8025a1231"
       },
@@ -6931,7 +6924,7 @@
         "id": "Zeu8JNB1uAGv",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 255
         },
         "outputId": "2954213b-e25b-4ad1-bd73-3627deac7149"
       },
@@ -7077,7 +7070,7 @@
         "id": "Av0C7XHcuXZu",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 255
         },
         "outputId": "bd0d3709-0a95-4a33-f47a-e073aa6ec8ad"
       },
@@ -7247,7 +7240,7 @@
         "id": "hlBPdegxuj60",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 306
+          "height": 343
         },
         "outputId": "a69824a8-6b2c-4570-86d9-971e09a86bba"
       },
@@ -7992,7 +7985,7 @@
         "id": "dWJx1VqGtm4H",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 255
         },
         "outputId": "d460cd89-625a-4c79-d543-5cb729bad566"
       },
@@ -8174,7 +8167,7 @@
         "id": "04MW9AVoYyoi",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 255
         },
         "outputId": "31f267d3-976e-4537-b66c-04b7e242d49d"
       },
@@ -8320,7 +8313,7 @@
         "id": "KUmp7usRua-3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 275
         },
         "outputId": "9a8b4524-63a9-4499-a93d-284760cc0a96"
       },
@@ -8478,7 +8471,7 @@
         "id": "82UpJj8HZWxa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 275
         },
         "outputId": "389949bc-41f4-416b-9a4f-f802c71efe95"
       },
@@ -8634,7 +8627,7 @@
         "id": "4dPnst35uasM",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 275
         },
         "outputId": "c85d43d4-099d-460e-af45-688580f9c1e8"
       },
@@ -8803,7 +8796,7 @@
         "id": "6B3z46ovZaiL",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 145
+          "height": 182
         },
         "outputId": "d54f0039-34c5-4e5a-e373-3f507d39bac3"
       },
@@ -8989,7 +8982,7 @@
         "id": "l8JB7S_-cBkJ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 128
+          "height": 162
         },
         "outputId": "6f8f6696-4b8d-41de-d8f7-4e257e88faa9"
       },
@@ -9118,7 +9111,7 @@
         "id": "wn8z_As1caHK",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 128
+          "height": 162
         },
         "outputId": "1964c70d-b348-4ce1-cc0d-70bf4d205116"
       },
@@ -9651,7 +9644,7 @@
         "id": "ujlmkJdjuv0W",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 306
+          "height": 343
         },
         "outputId": "f6bf57ce-563b-4ef0-945f-303004e34e4c"
       },
@@ -10656,7 +10649,7 @@
         "id": "9DwGSRED40ll",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 600
+          "height": 617
         },
         "outputId": "9a30b5dc-2b40-496f-9393-50841c284713"
       },
@@ -13332,7 +13325,7 @@
         "1. Between control and compare models which had same test size and random state, but different normalization used (MinMaxScaler and StandardScaler), no differences were noticed. \n",
         "2. Between the four models, which had same normalization (StandardScaler) and same test size & random states, we noticed considerable differences as they used different sets of columns in data frames. The best performance was found when all relevant categorical variables were added. It resulted in r-squared score of 0.766 which was about 30% increase in performance from our first iteration. Also, noticed huge decrease in errors, which would mean good news for decision makers. \n",
         "3. Interestingly, the next best model was the model_demo which only had demographic variables added to the numerical dataframe. There were minute differences in terms of performance with model_all performance which suggests that the company could probably build prediction models focusing on these instead of other variables in the dataset- helping them to narrow down the key performance indictors from these set of demographic indicators. It could also be prudent to just use these variables for their models as it would decrease load on algorithms or machines running these algorithms, increasing efficiency and performance if there are tons of data.\n",
-        "4. Similarly, model_others performed along the performance of model_compare and model_control, which means the categorical variables are not good variables to choose by themselves when making models for this company.\n",
+        "4. Similarly, model_others performed along the performance of model_compare and model_control, which means these types of categorical variables are not good variables to choose by themselves when making models for this company.\n",
         "5. Finally, there was a difference of about 50 dollars or more dollars on RMSE and MAE, and over 20k on MSE. This is a significant gain in terms of predictive USD value as we had discussed along the lines of business decision making and costs in part 6.\n",
         "   "
       ]
